--- a/tiedot.html
+++ b/tiedot.html
@@ -11,8 +11,8 @@
 
 <body>
 
-<div class="logo">
-	<img src="g4.png" alt="logo" width="100" height="90">
+<div>
+	<img class="logo" src="g4.png" alt="logo">
 </div>
 
 <nav>
