--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>HoneyLeoKnits</title>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width/>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Courier+Prime">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans">
