--- a/blogi.html
+++ b/blogi.html
@@ -24,7 +24,7 @@
 </nav>
 
  <section class="postaus">
-	<a class="otsikko" href="postaus1.htm">Blogipostaus</a>
+	<a class="otsikko" href="postaus1.html">Blogipostaus</a>
 	<p class="paiva">4.3.2025</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae sem quis tellus aliquam lacinia vitae ut enim. Mauris risus sem, sodales in posuere a, aliquet sit amet nisl. Morbi bibendum sagittis purus, a vulputate augue. Proin nunc odio, consectetur tincidunt nulla nec, rhoncus dictum ipsum. Cras pretium dolor vitae ligula vulputate, vitae fermentum purus facilisis. Aliquam sit amet tristique tortor, non condimentum enim. Integer eu nisl venenatis est porta tincidunt. Nam posuere quam bibendum, vulputate nunc malesuada, fringilla nunc. Morbi ex urna, interdum in convallis eget, congue non massa. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 	<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi placerat euismod magna, in facilisis...</p>
